# stackup-lint

./: .travis.yml  Cargo.toml  README.MD
src/: main.rs
stackup-lint/: Cargo.toml
stackup-lint/src/: interface.rs  lib.rs
stackup-lint/src/rules/: associations.rs  id.rs  list_of_scalars.rs  mod.rs
stackup-parser/: Cargo.toml
stackup-parser/src/: lib.rs  scanner.rs  schema.rs
stackup-parser/src/scanner/: test.rs
tests/: integration_tests.rs  stackup-example.graphql  syntax-error.graphql  test.graphql
